# imglab-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
imglab/: __init__.py  sequence.py  srcset.py  url.py
imglab/utils/: srcset.py
tests/: test_color.py  test_position.py  test_sequence.py  test_signature.py  test_source.py  test_srcset.py  test_url.py  test_utils.py
tests/utils/: test_srcset.py  test_url.py
